qa/apps/renderer/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clin-prescription-renderer
spec:
  template:
    spec:
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: index.docker.io/ferlabcrsj/clin-prescription-renderer:a8cfb8b8bceca39ccecc59bd02bf4c7b0569612a-1641595088 # {"$imagepolicy": "flux-clin-qa:renderer"}
          name: clin-prescription-renderer
