qa/apps/renderer/ingresses.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clin-prescription-renderer
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
    - hosts:
        - renderer.qa.clin.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: renderer.qa.clin.ferlab.bio
      http:
        paths:
          - path: /
            backend:
              serviceName: clin-prescription-renderer
              servicePort: 8080
